--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ form input[type="email"],
 form input[type="password"] {
     width: 100%;
     height: 7px;
-    padding: 10px;
+    padding: 12px;
     margin-bottom: 10px;
     box-sizing: border-box;
 }
@@ -40,7 +40,7 @@ form input[type="submit"] {
 }
 
 form input[type="submit"]:hover {
-    background-color: #2980b9;
+    background-color: #0d4061;
 }
 
 .FirstPage{
@@ -48,4 +48,48 @@ form input[type="submit"]:hover {
     background-size: cover;
     background-attachment: fixed;
     width: 100%;
+    height: 100vh;
+}
+
+.content{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 230px;
+}
+
+.welcome h1{
+    font-size: 35px;
+}
+
+.welcome{
+    font-weight: bold;
+    color: gold;
+}
+
+form input {
+    text-align: center;
+    border: 1px solid #ccc;
+    padding: 15px;
+    border-radius: 8px;
+    width: 100%; 
+    max-width: 800px;  
+    background-color: white; 
+    margin: 3px;
+    margin-left: 0px;
+}
+
+/* For screens smaller than 600px (mobile) */
+@media (max-width: 600px) {
+    /* CSS rules for mobile layout */
+}
+
+/* For screens between 600px and 1024px (tablet) */
+@media (min-width: 601px) and (max-width: 1024px) {
+    /* CSS rules for tablet layout */
+}
+
+/* For screens larger than 1024px (desktop) */
+@media (min-width: 1025px) {
+    /* CSS rules for desktop layout */
 }
