--- a/styles-home.css
+++ b/styles-home.css
@@ -1,7 +1,7 @@
 /* General style for the homepage */
 body {
     font-family: Arial, sans-serif;
-    background-color: #e2dbdb 
+    background-color: #e2dbdb;
     color: #333; 
     margin: 0px;
 }
