--- a/myapp/public/css/styles.css
+++ b/myapp/public/css/styles.css
@@ -44,7 +44,7 @@ form input[type="submit"]:hover {
 }
 
 .FirstPage{
-    background-image: url(Media/bg.png);
+    background-image: url(/myapp/public/Media/bg.png);
     background-size: cover;
     background-attachment: fixed;
     width: 100%;
@@ -82,7 +82,7 @@ form input {
 /* For screens smaller than 600px (mobile) */
 @media (max-width: 600px) {
     body {
-        background-image: url('/path/to/your/image.png');
+        background-image: url('/myapp/public/Media/bg.png');
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
@@ -92,7 +92,7 @@ form input {
 /* For screens between 600px and 1024px (tablet) */
 @media (min-width: 601px) and (max-width: 1024px) {
     body {
-        background-image: url('/path/to/your/image.png');
+        background-image: url('/myapp/public/Media/bg.png');
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
@@ -102,7 +102,7 @@ form input {
 /* For screens larger than 1024px (desktop) */
 @media (min-width: 1025px) {
     body {
-        background-image: url('/path/to/your/image.png');
+        background-image: url('/myapp/public/Media/bg.png');
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
