--- a/myapp/public/css/styles-home.css
+++ b/myapp/public/css/styles-home.css
@@ -172,6 +172,107 @@ footer {
     margin-left: 260px;
 }
 
+/* Style for the message window */
+.message-window {
+    position: fixed;
+    right: 0;
+    top: 60px;
+    width: 300px;
+    height: calc(100% - 60px);
+    background-color: #f2f2f2;
+    box-shadow: -2px 0 5px rgba(0, 0, 0, 0.2);
+    z-index: 1000;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between; /* Ensure button stays at the bottom */
+}
+
+.message-header {
+    background-color: #8b4513;
+    color: white;
+    padding: 10px;
+    text-align: center;
+}
+
+.message-content {
+    padding: 20px;
+    overflow-y: auto;
+    flex-grow: 1; /* Pushes the button down */
+}
+
+.new-chat-btn {
+    background-color: #8b4513;
+    color: white;
+    border: none;
+    border-radius: 25px;
+    padding: 10px 20px;
+    margin: 10px;
+    cursor: pointer;
+    align-self: flex-end; /* Aligns the button to the right */
+    position: relative;
+    bottom: 0;
+    right: 0;
+    margin-bottom: 20px;
+    margin-right: 20px;
+}
+
+.new-chat-btn:hover {
+    background-color: #a0522d;
+}
+
+button {
+    padding: 10px 20px;
+    background-color: #898b8a;
+    color: white;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+button:hover {
+    background-color: #45a049;
+}
+
+
+// Styles for opportunities
+
+.filters {
+    margin: 10px auto;
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+}
+
+.filters input,
+.filters select {
+    padding: 10px;
+    font-size: 16px;
+}
+
+.opportunities {
+    margin-top: 150px;
+}
+
+.opportunities-list {
+    padding: 20px;
+}
+
+.opportunity-card {
+    border: 1px solid #ccc;
+    padding: 20px;
+    margin: 10px 0;
+    border-radius: 5px;
+}
+
+.opportunity-card h3 {
+    margin: 0 0 10px;
+}
+
+.opportunity-card p {
+    margin: 5px 0;
+}
+
+
 /* For screens smaller than 600px (mobile) */
 @media (max-width: 600px) {
 
