--- a/myapp/public/css/styles-profile-setup.css
+++ b/myapp/public/css/styles-profile-setup.css
@@ -173,7 +173,7 @@ input[type="submit"]:hover {
     background-color: #45a049;
 }
 
-.lastname, .phone, .country, .birthday {
+.lastname, .country, .birthday {
     margin-left: 100px;
 }
 
