--- a/myapp/public/css/styles.css
+++ b/myapp/public/css/styles.css
@@ -18,7 +18,7 @@ form {
     margin-bottom: 10px;
 }
 
-form input[type="text"],
+form input[type="date"],
 form input[type="email"],
 form input[type="password"] {
     width: 100%;
